--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+title: "Automating Network Tasks with Python: A Journey into Network Automation"
+author: "Lloyd Godo"
+description: "In today's rapidly evolving world of IT, automation is becoming an essential skill for efficient and scalable network management. In this blog post, I'll take you through my journey of mastering network automation using Python. I'll showcase the Python scripts I've created and provide screenshots of the results I've achieved." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
+# email: "example@mail.com"
+# twitter_username: "twitteruser"
+github_username: "floy-gee3"
+linkedin_username: "Lloyd Godo"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
