--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Automating Network Tasks with Python: A Journey into Network Automation"
 author: "Lloyd Godo"
-description: "In today's rapidly evolving world of IT, automation is becoming an essential skill for efficient and scalable network management. In this blog post, I'll take you through my journey of mastering network automation using Python. I'll showcase the Python scripts I've created and provide screenshots of the results I've achieved." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "This page describes my journey into configuration automation of network devices." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
