--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "This page describes my journey into the automation of network devi
 # email: "example@mail.com"
 # twitter_username: "twitteruser"
 github_username: "floy-gee3"
-linkedin_username: "flgodo"
+linkedin_username: "lloyd-godo"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
